# spatial_alg

./: Cargo.toml
benches/: math_benchmarks.rs  my_benchmark.rs
examples/: basics.rs
src/: algo.rs  lib.rs  utils.rs
src/nalgebra_impl/: mod.rs  rot.rs  trans.rs
